# keyspace

./: .gitignore  Cargo.toml
.devcontainer/: Dockerfile  devcontainer.json
contracts/script/: DeployKeyStore.s.sol  Prove.s.sol
contracts/src/: KeyStore.sol
contracts/test/: KeyStore.t.sol
crates/imt/: Cargo.toml
crates/imt/src/: lib.rs  node.rs  tree.rs
crates/imt/src/proof/: exclusion.rs  inclusion.rs  insert.rs  mod.rs  mutate.rs  node.rs  update.rs
crates/imt/src/storage/: btree_imt_storage.rs  mod.rs
crates/imt/src/zkvm/: insert.rs  update.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: keystore_bindings.rs  lib.rs
crates/keystore-bindings/: Cargo.toml
crates/keystore-bindings/src/: bindings.rs
crates/node/: Cargo.toml
crates/node/src/: main.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: lib.rs
crates/state-manager/: Cargo.toml
crates/state-manager/src/: keys.rs  lib.rs  manager.rs  message.rs
crates/state-manager/src/storage/: btree.rs  keys.rs  mod.rs  sled.rs
crates/state-manager/src/storage/imt/: btree.rs  keys.rs  mod.rs  sled.rs
crates/transaction-pool/: Cargo.toml
crates/transaction-pool/src/: lib.rs  message.rs  transaction.rs  transaction_verifier.rs
crates/zkvm/batcher/: Cargo.toml
crates/zkvm/batcher/src/: main.rs
crates/zkvm/ecdsa-record/: Cargo.toml
crates/zkvm/ecdsa-record/src/: main.rs
crates/zkvm/programs-lib/: Cargo.toml
crates/zkvm/programs-lib/src/: lib.rs
crates/zkvm/programs-lib/src/batcher/: inputs.rs  program.rs
crates/zkvm/programs-lib/src/batcher/proof/: mod.rs  sp1_forced.rs  wrapped.rs
crates/zkvm/programs-lib/src/batcher/transaction/: forced_transaction.rs  mod.rs  sequenced_transaction.rs
crates/zkvm/programs-lib/src/ecdsa_record/: inputs.rs  k_signature.rs  mod.rs  program.rs  signature.rs
crates/zkvm/scripts/: Cargo.toml  build.rs
crates/zkvm/scripts/src/: lib.rs
imt/: Cargo.toml
imt/src/: lib.rs  node.rs
imt/src/storage/: btree_imt_storage.rs  mod.rs
imt/src/zkvm/: insert.rs  mod.rs  mutate.rs  update.rs
zkvm/batcher/: Cargo.toml
zkvm/programs-lib/: Cargo.toml
zkvm/programs-lib/src/: lib.rs
zkvm/programs-lib/src/batcher/: mod.rs
zkvm/programs-lib/src/batcher/proof/: sp1.rs
zkvm/programs-lib/src/batcher/transaction/: forced_transaction.rs  mod.rs
zkvm/programs-lib/src/ecdsa_record/: signature.rs
zkvm/scripts/: Cargo.toml
