[workspace]
resolver = "2"

members = [
    "crates/*",
    # "crates/imt",
    # "crates/indexer",
    # "crates/keystore-bindings",
    # "crates/node",
    # "crates/state-manager",
    # "crates/transaction-pool",
    # "crates/zkvm/programs-lib",
]

exclude = [
    # "zkvm/*",
    "zkvm/batcher",
    "zkvm/ecdsa-record",
    "zkvm/programs-lib",
    "zkvm/scripts",
]
