[package]
name = "keyspace-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
keyspace-keystore-bindings = { path = "../keystore-bindings" }
keyspace-state-manager = { path = "../state-manager" }

anyhow = "1.0.87"
alloy = { version = "0.3.5", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
