[package]
name = "keyspace-node"
version = "0.1.0"
edition = "2021"

[dependencies]
keyspace-indexer = { path = "../indexer" }
keyspace-state-manager = { path = "../state-manager" }

tokio = { version = "1", features = ["full"] }
alloy = { version = "0.3.5", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
futures = "0.3.30"
anyhow = "1.0.89"
