[package]
name = "keyspace-node"
version = "0.1.0"
edition = "2021"

[dependencies]
keyspace-indexer = { path = "../indexer" }
keyspace-state-manager = { path = "../state-manager" }
keyspace-transaction-pool = { path = "../transaction-pool" }
keyspace-sequencer = { path = "../sequencer" }
anyhow = "1.0.89"
alloy = { version = "0.3.5", features = ["full"] }
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
