[package]
name = "keyspace-state-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
keyspace-imt = { path = "../imt" }
keyspace-keystore-bindings = { path = "../keystore-bindings" }

tokio = { version = "1", features = ["full"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
sled = "0.34.7"
bincode = "1.3.3"
tracing = "0.1.40"
