[package]
name = "keyspace-transaction-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
keyspace-indexer = { path = "../indexer" }
anyhow = "1.0.87"
serde = { version = "1.0.210", features = ["derive"] }
sp1-sdk = "3.0.0-rc1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
