[package]
name = "keyspace-batcher"
version = "0.1.0"
edition = "2021"

[dependencies]
keyspace-programs-lib = { path = "../programs-lib" }
sp1-zkvm = { version = "2.0.0", features = ["verify"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "patch-sha2-v0.10.8" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
