[package]
name = "keyspace-ecdsa-record"
version = "0.1.0"
edition = "2021"

[dependencies]
keyspace-programs-lib = { path = "../programs-lib" }
sp1-zkvm = { version = "3.0.0-rc1", features = ["verify"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[patch.crates-io]
ecdsa-core = { git = "https://github.com/sp1-patches/signatures", package = "ecdsa", branch = "patch-ecdsa-v0.16.9" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", branch = "patch-v2.0.2" }
