[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prove-ecdsa-record"
path = "src/bin/ecdsa_record/prove.rs"


[dependencies]
keyspace-programs-lib = { path = "../programs-lib" }
k256 = "0.13.4"
rand = "0.8.5"
sp1-sdk = "2.0.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[build-dependencies]
sp1-helper = "2.0.0"
